--- a/src/SearchService/SearchService.csproj
+++ b/src/SearchService/SearchService.csproj
@@ -8,11 +8,8 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="16.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="10.0.0" />
         <PackageReference Include="MongoDB.Entities" Version="24.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Controllers\" />
     </ItemGroup>
 
 </Project>
