--- a/src/SearchService/SearchService.csproj
+++ b/src/SearchService/SearchService.csproj
@@ -8,8 +8,13 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="16.0.0" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="9.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="10.0.0" />
         <PackageReference Include="MongoDB.Entities" Version="24.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Contracts\Contracts.csproj" />
     </ItemGroup>
 
 </Project>
