--- a/src/SearchService/SearchService.csproj
+++ b/src/SearchService/SearchService.csproj
@@ -7,8 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper" Version="16.0.0" />
-        <PackageReference Include="MassTransit.RabbitMQ" Version="9.0.0" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.16" />
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="10.0.0" />
         <PackageReference Include="MongoDB.Entities" Version="24.0.0" />
     </ItemGroup>
